    translations problems, compilation warnings etc...
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key.h:
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-util.c: Fix compilation warnings
    * libseahorse/seahorse-key.c:
    * libseahorse/seahorse-key.h:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-manager.glade: Add 'trusted keys' tab
    
2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

    * Makefile.am:
    * configure.in:
    * libcryptui/*:
    * libcryptui/tests/*: Beginnings of libcryptui

2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

    * Merged changes from stable branch: seahorse-0-8
 
2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-key-store.c: 
    * libseahorse/seahorse-keyset.c: Cleanup unnecessary code,
    fix memory leak. 
    * pixmaps/seahorse-person.png:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade: UI changes to Key Properties
    code by Jim Pharis (bug #317537)
    
2005-10-11  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * libseahorse/seahorse-pgp-key.c:
    * libseahorse/seahorse-pgp-key.h:  Committed patches attached to
    Bug #314744 and #315084
    
2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.in: Added ne in ALL_LINGUAS

2005-09-16  Nate Nielsen <nielsen@memberwebs.com>

	* src/seahorse-keyserver-sync.c: Fix syncing after recent 
	refactoring

2005-09-12  Nate Nielsen <nielsen@memberwebs.com>

    * src/seahorse-context.c: Fix lookup on wrong property.
    
2005-08-31  Adam Schreiber <sadam@clemson.edu>
    
    * libseahorse/seahorse-pgp-key-op.c: Fixed multiple photo id
    appearance bug (Bug #314981)

2005-08-29  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c: Fix problems with crashing
    when signing. 
    * libseahorse/seahorse-key.c: 