@@ -18,6 +18,7 @@
     * libseahorse/seahorse-key.h:
     * src/seahorse-key-manager.c:
     * src/seahorse-key-manager.glade: Add 'trusted keys' tab
+    * libseahorse/seahorse-key-store.c: Don't show key graphic for uids.
     
 2005-10-12  Nate Nielsen  <nielsen@memberwebs.com>
 
